# LinuxProject

./: README.md
example/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac
example/autom4te.cache/: output.0  traces.0  traces.1
example/include/: hello.h
example/lib/: Makefile  Makefile.am  Makefile.in  hello.c
example/lib/.deps/: hello.Po
example/src/: Makefile  Makefile.am  Makefile.in  test.c
example/src/.deps/: test.Po
exampleDynamic/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
exampleDynamic/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
exampleDynamic/include/: hello.h
exampleDynamic/lib/: Makefile  Makefile.am  Makefile.in  hello.c
exampleDynamic/lib/.deps/: hello.Plo
exampleDynamic/src/: Makefile  Makefile.am  Makefile.in  test.c
